# editedit-backend

./: .gitignore  .prettierrc  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  requirements.txt  script.sh
app/: .env.example  alembic.ini  main.py  pyproject.toml
app/api/: router.py
app/api/endpoints/: audit_logs.py  auth.py  cases.py  cold.py  cold_ingest.py  graph_api.py  health.py  hypotheses.py  infer.py  log_sources.py  organizations.py  phase6.py  users.py
app/core/: canonical_json.py  config.py  deps.py  middleware.py  rbac.py  security.py  worm.py
app/db/: models.py  session.py
app/ml/: MVP_DATA_LINEAGE.md  __init__.py  anomaly.py  counterfactual.py  critic.py  csv_mapping.py  fusion.py  graph.py  mitre.py  normalize.py  orchestrator.py  rag.py  schemas.py
app/policies/: fusion_rules.yaml
app/schemas/: audit.py  auth.py  case.py  cold_ingest.py  forensic.py  ingest.py  normalisation.py  organization.py  security.py  user.py
app/services/: audit_service.py  case_service.py  cold_object_store.py  cold_stack.py  dossier_service.py  es_service.py  evidence_service.py  infer_job_service.py  log_source_resolve.py  notification_service.py  ocsf_rederive_v1_0.py  organization.py  password_reset_service.py  refresh_token_service.py  sealing_service.py  user_service.py
app/tests/: test_seal_idempotency.py  test_sealing_and_rederive.py
docker/: Dockerfile
infrastructure/: docker-compose-2.yml  docker-compose.yml
infrastructure/backend/: .env.example  Dockerfile  (+3 more)
migrations/: env.py
postman/: ForensIQ-Backend.postman_collection.json
(+24 files in other folders)
